# google_reviews_mapper

./: .env.dev  .gitignore  README.md  get_reviews.py  main.py  pyproject.toml  requirements.txt
gmaps/: bars.py  restaurants.py
google_reviews_mapper/: __main__.py  clean_data.py  compile_restaurants.py  get_restaurants.py
google_reviews_mapper/gmaps/: cafes.py
google_reviews_mapper/transform/: stats_template.txt  tools.py
gps/: tools.py
transform/: transform.py
